@@ -3,6 +3,8 @@
 #
 
 
+2017-10-18 -> some first step towards simple_tennis
+
 2017-10-17 -> add pixel-objects for simple_tennis example
 	      first implementation of the simple_tennis example
 
